docker/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artify
  labels:
    app: artify

spec:
  replicas: 3
  selector:
    matchLabels:
      app: artify
  template:
    metadata:
      labels:
        environment: production
        app: artify
    spec:
      containers:
        - name: api
          image: winteryfox/artify-api
          ports:
            - containerPort: 8080
