docker/kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service

spec:
  selector:
    app: artify
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
