docker/kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service

spec:
  selector:
    app: artify
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
