docker/kubernetes/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service

spec:
  selector:
    app: artify
  ports:
    - name: postgres
      protocol: TCP
      port: 5672
      targetPort: 5672
