docker/kubernetes/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /(api/?.*)
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 8080
